--- a/src/main/resources/templates/notAuthorized.html
+++ b/src/main/resources/templates/notAuthorized.html
@@ -22,59 +22,8 @@
 </head>
 <body >
 <div layout:fragment="content1">
-
-<div class="p-3 m-2">
-    <div class="card">
-        <div class="card-header"> Liste Produits</div>
-        <div class="card-body">
-            <form method="get" th:action="@{/user/index}">
-                <label>Keyword</label>
-                <input type="text" name="keyword" th:value="${keyword}">
-                <button class="btn btn-outline-info">search</button>
-            </form>
-            <table class="table">
-                <thead >
-                <tr>
-                    <th>ID</th>
-                    <th>Nom</th>
-                    <th>Prix</th>
-                    <th>Description</th>
-                    <th>Quantité</th>
-                    <th>Catégorie</th>
-                    <th>Marque</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr th:each="p : ${listProduits}">
-                    <td th:text="${p.id}"></td>
-                    <td th:text="${p.nom}"></td>
-                    <td th:text="${p.prix}"></td>
-                    <td th:text="${p.description}"></td>
-                    <td th:text="${p.quantite}"></td>
-                    <td th:text="${p.categorie}"></td>
-                    <td th:text="${p.marque}"></td>
-                    <td th:if="${#authorization.expression('hasRole(''ADMIN'')')}">
-                        <a onclick="return confirm('Est vous sure!')" class="btn btn-danger" th:href="@{/admin/deleteProduit(id=${p.id} , keyword=${keyword}, page=${currentPage})}">delete
-                        </a>
-                    </td>
-
-                    <td th:if="${#authorization.expression('hasRole(''ADMIN'')')}">
-                        <a  class="btn btn-success" th:href="@{/admin/editProduit(id=${p.id} , keyword=${keyword}, page=${currentPage} )}">Edit
-                        </a>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
-            <ul class="nav nav-pills">
-                <li th:each="page,status : ${pages}">
-                    <a  th:class="${status.index==currentPage?'btn btn-info m-1':'btn btn-outline-info m-1'}"
-                        th:href="@{/user/index(page=${status.index},keyword=${keyword})}"
-                        th:text="${status.index}"></a>
-
-                </li>
-
-            </ul>
-        </div>
+<div class="alert alert-danger m-3">
+    <h2>Not Authorized</h2>
     </div>
 </div>
 </div>
