--- a/src/main/resources/templates/template1.html
+++ b/src/main/resources/templates/template1.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org"
-xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Ma Boutique</title>
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="/webjars/bootstrap/5.1.1/css/bootstrap.min.css">
 
-    <!-- Bootstrap Icons (optionnel) -->
+    <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="/webjars/bootstrap-icons/1.13.1/font/bootstrap-icons.css">
 
-    <!-- jQuery (optionnel pour Bootstrap 5) -->
+    <!-- jQuery + Bootstrap JS -->
     <script src="/webjars/jquery/3.7.1/jquery.min.js"></script>
-
-    <!-- Bootstrap JS avec Popper -->
     <script src="/webjars/bootstrap/5.1.1/js/bootstrap.bundle.min.js"></script>
-
 </head>
+
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
@@ -29,9 +30,10 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
         </button>
 
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <!-- Liens à gauche -->
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/index}">Accueil</a>
+                    <a class="nav-link" th:href="@{/user/index}">Accueil</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Produits</a>
@@ -40,40 +42,53 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
                     <a class="nav-link" href="#">Contact</a>
                 </li>
 
-                <!-- Dropdown -->
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink"
                        role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Menu
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <li><a class="dropdown-item" th:href="@{/formProduits}">Nouveau Produit</a></li>
-                        <li><a class="dropdown-item" th:href="@{/index}">Chercher Produit</a></li>
-                        <li><a class="dropdown-item" href="#">Déconnexion</a></li>
+                        <li th:if="${#authorization.expression('hasRole(''ADMIN'')')}"><a class="dropdown-item" th:href="@{/admin/formProduits}">Nouveau Produit</a></li>
+                        <li><a class="dropdown-item" th:href="@{/user/index}">Chercher Produit</a></li>
                     </ul>
                 </li>
-
-
             </ul>
 
+            <!-- Liens à droite (connexion / utilisateur) -->
             <ul class="navbar-nav ms-auto">
-                <li class="nav-item dropdown">
+
+                <!-- Si utilisateur connecté -->
+                <li class="nav-item dropdown" sec:authorize="isAuthenticated()">
                     <a class="nav-link dropdown-toggle text-white" href="#" id="userDropdown"
                        role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         <i class="bi bi-person-circle"></i>
-                        <span th:text="${#authentication?.name}">Utilisateur</span>
+                        <span sec:authentication="name">Utilisateur</span>
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
-                        <li><a class="dropdown-item text-danger" th:href="@{/logout}">Déconnexion</a></li>
+                        <li>
+                            <form th:action="@{/logout}" method="post" style="margin: 0;">
+                                <button type="submit" class="dropdown-item text-danger">Déconnexion</button>
+                            </form>
+                        </li>
+                        <li><a class="dropdown-item" href="#">Profile</a></li>
                     </ul>
                 </li>
+
+                <!-- Si utilisateur non connecté -->
+                <li class="nav-item" sec:authorize="isAnonymous()">
+                    <a class="nav-link text-white" th:href="@{/login}">
+                        <i class="bi bi-box-arrow-in-right"></i> Connexion
+                    </a>
+                </li>
+
             </ul>
         </div>
     </div>
 </nav>
 
+<!-- Contenu principal -->
 <section layout:fragment="content1">
-
+    <!-- Ton contenu dynamique ici -->
 </section>
 
 </body>
