--- a/frontend-angular/src/app/shared/navbar-client/navbar-client.html
+++ b/frontend-angular/src/app/shared/navbar-client/navbar-client.html
@@ -9,8 +9,8 @@
   <ul class="nav-links" [class.active]="menuOpen">
     <li><a class="nav-btn" routerLink="/home">Home</a></li>
     <li><a class="nav-btn" routerLink="/boutique">Boutique</a></li>
-    <li><a href="#">À propos</a></li>
-    <li><a href="#">Contact</a></li>
+    <li><a class="nav-btn" routerLink="/apropos">À propos</a></li>
+    <li><a class="nav-btn" routerLink="/contact">Contact</a></li>
   </ul>
 
   <!-- Menu burger pour mobile -->
