--- a/frontend-angular/src/app/admin-template/admin-template.html
+++ b/frontend-angular/src/app/admin-template/admin-template.html
@@ -73,6 +73,14 @@
           <mat-icon>inventory</mat-icon> Products
         </button>
       </mat-list-item>
+
+      <mat-list-item>
+        <button mat-button routerLink="/admin/team-member">
+          <mat-icon>group</mat-icon> Team Member
+        </button>
+      </mat-list-item>
+
+
     </mat-nav-list>
   </mat-drawer>
 
