affichage et la gestion d'etat de reservation a la partie admin

--- a/frontend-angular/src/app/admin-template/admin-template.html
+++ b/frontend-angular/src/app/admin-template/admin-template.html
@@ -80,6 +80,13 @@
         </button>
       </mat-list-item>
 
+      <mat-list-item>
+        <button mat-button routerLink="/admin/reservations">
+          <mat-icon>event</mat-icon> Réservations
+        </button>
+      </mat-list-item>
+
+
 
     </mat-nav-list>
   </mat-drawer>
